# Bstore

./: .env  .gitignore  bstordrive.json  build.sh  db.sqlite3  manage.py  pyproject.toml  render.yaml  requirements.txt
Bstore/: asgi.py  client_secret.json  settings.py  urls.py  wsgi.py
base/: email.py  forms.py  message_body.txt  models.py  urls.py  views.py
base/migrations/: 0001_initial.py  0002_blog_material_is_free.py
material_api/: apps.py  permissions.py  serializers.py  urls.py  views.py
media/: JSS_TWO_HAUSA_LANGUAGE.docx
static/css/: login_style.css  style.css
static/js/: custom.js
templates/: 404.html  500.html  about.html  add_material.html  api_doc.html  blog.html  books.html  categories.html  contact.html  course_detail.html  courses.html  footer.html  header.html  index.html  login.html  my_template.html  pending_materials.html  register.html  search.html  success.html  update_book.html  update_material.html
